Rewrote header to fix issues on mobile

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,83 +1,92 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    width: 74vw;
-    margin-top: 5%;
-    margin-left: 12%;
+    width: 75vw;
+    margin: 5% auto;
 
     .heading {
-        display: flex;
-        flex-direction: column;
-        width: 29.5vw;
+        width: 76.2vw;
+        height: 20vh;
+        margin: 0 auto;
+        position: relative;
 
-        & .logo {
-            width: 70px;
-            height: 70px;
-            margin-bottom: 3.6vh;
-            margin-top: 0;
+        & .site-logo {
+            width: 5vh;
+            position: absolute;
+            top: 0;
+            left: 0;
 
             & img {
-                width: 5vh;
-                transform: translateY(-15%);
+                width: 100%;
             }
         }
     }
     .searchbar {
         display: flex;
         width: 35.9vw;
+        min-width: 550px;
+        height: 4.5vh;
         font-family: inherit;
+        position: absolute;
+        right: 1.5%;
 
         .search {
-            flex-basis: 100%;
-            position: relative;
-
-            &::after {
-                content: '';
-                position: absolute;
-                background-image: url(../../images/icons/search.svg);
-                right: -3%;
-                top: .7rem;
-                width: 1.2rem;
-                height: 1.2rem;
-                transform: scale(.8);
-            }
+            width: 65%;
 
             & input {
-                font-family: inherit;
-                width: 100%;
-                height: 20%;
-                background-color: $col-green-2;
+                -moz-appearance: none;
+                -webkit-appearance: none;
+                appearance: none;
+                outline: none;
                 border: none;
+                box-sizing: border-box;
                 border: 1px solid $col-green-1;
-                padding: 0 3%;
-                border-radius: 4px;
-                margin-left: 1%;
-
-                &:focus{
-                    outline-color: $col-green-1;
-                }
+                width: 100%;
+                height: 100%;
+                border-radius: .2em;
+                line-height: 1.3;
+                margin: 0;
+                font-size: 16px;
+                font-family: inherit;
+                background-color: $col-green-2;
+                background-image: url('/images/icons/search.svg');
+                background-repeat: no-repeat;
+                background-position: right 1em top 50%;
+                background-size: 1em auto;
+                padding-left: 1em;
+                margin-left: 5px;
             }
         }
-        .select {
-            flex-basis: 30%;
-            min-width: 120px;
-            position: relative;
-            cursor: pointer;
+        .select{
+            width: calc(35% - 5px); // account for the margin on the input
 
             & select {
-                border: none;
+                cursor: pointer;
+                font-size: 16px; // iOS Safari zooms in if less than 16px causing weird issues
                 font-family: inherit;
+                color: $col-white;
+                padding: .6em 1.4em .5em .8em;
+                line-height: 1.3;
+                height: 100%;
                 width: 100%;
-                height: 20%;
-                background-color: $col-green-1;
-                color: white;
                 box-sizing: border-box;
-                font-size: 80%;
-                border-radius: 4px;
-                text-indent: 5%;
-
-                &:focus{
-                    outline-color: $col-green-1;
+                margin: 0;
+                border-radius: .2em;
+                border-color: $col-green-1;
+                -moz-appearance: none;
+                -webkit-appearance: none;
+                appearance: none;
+                background-color: $col-green-1;
+                background-image: url('/images/dropdown_button.svg'), linear-gradient($col-green-1, $col-green-1);
+                background-repeat: no-repeat;
+                background-position: right .7em top 50%;
+                background-size: .65em auto;
+    
+                &::-ms-expand {
+                    display: none;
+                }
+                &:focus,
+                &:active {
+                    border-color: $col-green-2;
+                    outline: none;
                 }
             }
         }
@@ -86,10 +95,17 @@ header {
         font-weight: $fw-medium;
         font-size: 150%;
         min-width: 500px;
+        position: absolute;
+        left: 0;
+        top: 10vh;
 
         & a {
             color: inherit;
             text-decoration-color: $col-green-1;
+
+            &:hover{
+                text-decoration-color: inherit;
+            }
         }
     }
 }
